--- a/css/style.css
+++ b/css/style.css
@@ -344,13 +344,6 @@ html, body {
     margin-bottom: 0px;
 }
 
-.text-style-21 {
-    font-weight: bold;
-    font-size: 38px;
-    line-height: 48px;
-    color: #000000;
-}
-
 .text-style-22 {
     font-weight: bold;
     font-size: 25px;
@@ -566,22 +559,20 @@ input {
 }
 
 .form-button-1 {
+    height: 50px;
     width: 200px;
+    
     text-align: center;
     background: #000000;
     font-weight: bold;
     font-size: 14px;
-    line-height: 68px;
+    /* line-height: 68px; */
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
 .whole {
     display: none;
-}
-
-footer {
-    padding: 3rem;
 }
 
 .copyright {
@@ -597,13 +588,13 @@ footer {
 }
 
 .jumbotron-1 {
-    width: 420px;
+    width: 480px;
     mix-blend-mode: normal;
     opacity: 0.9;
     text-align: left;
     background: #FFFFFF;
-    padding: 0 3em 3% 3em;
-    margin-top: 3em;
+    padding: 0 2em 2% 2em;
+    margin-top: 2em;
     margin-left: 0.3em;
 }
 
@@ -625,7 +616,7 @@ footer {
 
 #div-1 {
     position: absolute;
-    width: 95%;
+    width: 100%;
     height: 100%;
     padding: 0;
 }
@@ -663,11 +654,6 @@ footer {
     display: none;
 }
 
-.left-section {
-    /* width: 70%; */
-    margin-left: 2em;
-}
-
 .right-section {
     /* width: 30%; */
     position: absolute;
@@ -678,9 +664,10 @@ footer {
 
 .bitmap-img-1 {
     border-radius: 100%;
-    width: 230px;
-    height: 230px;
+    width: 350px;
+    height: 350px;
     padding: 0;
+    margin-right: 3em;
 }
 
 .two-button {
@@ -760,6 +747,27 @@ footer {
 /* @media (max-width: 698px) { */
 
 @media (max-width: 575px) {
+    .left-section {
+        margin-left: 0.3em;
+        margin-top: 0;
+    }
+    .text-style-21 {
+        margin-top: 0; 
+        padding: 0;
+        font-weight: bold;
+        font-size: 38px;
+        line-height: 48px;
+        color: #000000;
+    }
+    .footer-1,.footer-2{
+        width: 50%;
+        margin-top: 1em;
+        padding: 1rem;
+    }
+    .footer-3{
+        width: 100%;
+        padding: 1rem;
+    }
     .nav-body {
         position: absolute;
         top: 0%;
@@ -826,6 +834,27 @@ footer {
 /* @media (min-width: 699px) { */
 
 @media (min-width: 576px) {
+    .left-section {
+        margin-left: 2em;
+    }
+    #horizontal-navbar {
+        opacity: 0.6;
+    }
+    .footer-1{
+        width: 20%;
+        padding-top: 3em;
+        padding-left: 1em; 
+    }
+    .footer-2{
+        width: 40%;
+        padding-top: 3em;
+        padding-left: 0.5em;
+    }
+    .footer-3{
+        width: 40%;
+        padding-top: 3em;
+        padding-right: 0;
+    }
     .social-list-1, .social-icon {
         display: none;
     }
@@ -873,7 +902,7 @@ footer {
     }
     .icon-2 {
         font-family: Helvetica;
-        font-size: 80px;
+        font-size: 60px;
         line-height: normal;
         color: #000000;
         mix-blend-mode: normal;
@@ -1000,6 +1029,17 @@ footer {
         line-height: 25px;
         text-align: justify;
         color: #8C93AA;
+    }
+    .text-style-21{
+        font-weight: bold;
+        font-size: 65px;
+        line-height: 90px;
+        letter-spacing: -0.3px;
+    }
+    .text-style-22{
+        font-size: 40px;
+        line-height: 60px;
+        letter-spacing: -0.3px;        
     }
     .short-line-2 {
         width: 2em;
